--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -14,7 +13,7 @@ matrix:
 
 before_script:
     - composer self-update
-    - composer install --dev
+    - composer install
 
 script: bin/phpunit --coverage-clover clover
 
