--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "doctrine/cache": "~1.4",
     "doctrine/annotations": "~1.2",
     "symfony/event-dispatcher": "~2.0|~3.0",
-    "mikey179/vfsStream": "^1.6"
+    "mikey179/vfsStream": "^1.6",
+    "symfony/finder": "~2.0|~3.0"
   },
   "autoload": {
     "psr-4": {
