--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
     "mikey179/vfsStream": "^1.6",
     "symfony/finder": "~2.0|~3.0"
   },
+  "suggest": {
+    "symfony/event-dispatcher": "~2.0|~3.0",
+    "doctrine/cache": "~1.4",
+    "symfony/finder": "~2.0|~3.0"
+  },
   "autoload": {
     "psr-4": {
       "Kcs\\Metadata\\": "lib/"
