--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": ">= 5.4.0"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8|^5.0",
+    "phpunit/phpunit": "^6.0",
     "doctrine/cache": "~1.4",
     "doctrine/annotations": "~1.2",
     "symfony/event-dispatcher": "~2.0|~3.0",
@@ -35,7 +35,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.x-dev"
+      "dev-master": "2.x-dev"
     }
   },
   "authors": [
