--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,13 @@ cache:
 
 php:
   - 7.1
+  - 7.2
 
 before_script:
     - composer self-update
     - composer install
 
-script: bin/phpunit --coverage-clover clover
+script: vendor/bin/phpunit --coverage-clover clover
 
 after_success:
     - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
