--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.1
-  - 7.2
+  - '7.3'
+  - '7.4snapshot'
+
+matrix:
+  allow_failures:
+    - php: '7.4snapshot'
 
 before_script:
     - composer self-update
@@ -15,5 +19,5 @@ before_script:
 script: vendor/bin/phpunit --coverage-clover clover
 
 after_success:
-    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover clover; fi
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover clover
