--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,11 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "phpstan/extension-installer": true
+    }
   },
   "extra": {
     "branch-alias": {
