--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": "^8.0",
-    "thecodingmachine/safe": "^1.0 | ^2.0"
+    "php": "^8.1",
+    "thecodingmachine/safe": "^1.0 || ^2.0 || ^3.0"
   },
   "scripts": {
     "phpstan": "phpstan analyse lib/ -c vendor/solido/php-coding-standards/phpstan.neon --level=8 --no-progress -vvv --memory-limit=2048M",
@@ -22,14 +22,14 @@
   "require-dev": {
     "doctrine/annotations": "^1.2 | ^2.0",
     "doctrine/cache": "^1.4",
-    "kcs/class-finder": "^0.2 | ^0.3 | ^1.0@dev",
+    "kcs/class-finder": ">=0.2,<1.0",
     "phpspec/prophecy-phpunit": "^2.0",
-    "phpunit/phpunit": "^9.0",
+    "phpunit/phpunit": "^10.0 || ^11.0",
     "psr/event-dispatcher": "^1.0",
     "roave/security-advisories": "dev-master",
     "solido/php-coding-standards": "dev-master",
-    "symfony/cache": "^4.4|^5.0|^6.0",
-    "symfony/finder": "^4.4|^5.0|^6.0"
+    "symfony/cache": "^4.4 || ^5.0 || ^6.0 || ^7.0",
+    "symfony/finder": "^4.4 || ^5.0 ||^6.0 || ^7.0"
   },
   "suggest": {
     "symfony/cache": "cache metadata",
